Project02_Deploy_HA_WebApp_using_CloudFormation/cloudformation_description/routes_networks.yml
Parameters:
  
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    Default: udacityUACproject
  PCIDRvpc: 
    Description: VPC IP Address Range
    Type: String
    Default: 10.0.0.0/16
  PCIDRprivatesubnet01:
    Description: Availability Zone 1 Private Subnet IP Address Range
    Type: String
    Default: 10.0.1.0/24
  PCIDRprivatesubnet02:
    Description: Availability Zone 2 Private Subnet IP Address Range
    Type: String
    Default: 10.0.2.0/24
  PCIDRpublicsubnet01:
    Description: Availability Zone 1 Public Subnet IP Address Range
    Type: String
    Default: 10.0.3.0/24
  PCIDRpublicsubnet02:
    Description: Availability Zone 2 Public Subnet IP Address Range
    Type: String
    Default: 10.0.4.0/24


Resources:

  #########################
  ######### VPC ###########
  #########################
  
  VPCHAWebApp: 
    Type : AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: PCIDRvpc
      EnableDnsHostnames: true


  #########################
  ######## SUBNETS ########
  #########################

  SUBNETprivate01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCHAWebApp 
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock:
        Ref: PCIDRprivatesubnet01
      MapPublicIpOnLaunch: false


  SUBNETprivate02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCHAWebApp
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock:
        Ref: PCIDRprivatesubnet02
      MapPublicIpOnLaunch: false
      
    
  SUBNETpublic01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCHAWebApp 
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock:
        Ref: PCIDRpublicsubnet01
      MapPublicIpOnLaunch: false


  SUBNETpublic02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCHAWebApp
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock:
        Ref: PCIDRpublicsubnet02
      MapPublicIpOnLaunch: false


  #########################
  #### INTERNETGATEWAY ####
  #########################

  INTERNETGW01: 
    Type: AWS::EC2::InternetGateway


  VPCGWATTA01:
    Type:  AWS::EC2::VPCGatewayAttachment 
    Properties: 
      VpcId:
        Ref: VPCHAWebApp 
      InternetGatewayId:
        Ref: INTERNETGW01


  #########################
  ########## NAT ##########
  #########################

  EIPNATGateway01:
    Type: AWS::EC2::EIP
    DependsOn: INTERNETGW01
    Properties: 
      Domain: vpc


  EIPNATGateway02:
    Type: AWS::EC2::EIP
    DependsOn: INTERNETGW01
    Properties:
      Domain: vpc


  NATGW01: 
    Type : AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt EIPNATGateway01.AllocationId
      SubnetId:
        Ref: SUBNETpublic01


  NATGW02: 
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIPNATGateway02.AllocationId
      SubnetId:
        Ref: SUBNETpublic02
   
   
  #########################
  ######## ROUTES #########
  #########################
    
  ROUTETABLEpublic01:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId:
        Ref: VPCHAWebApp

  ROUTEpublic01: 
    Type : AWS::EC2::Route
    DependsOn: VPCGWATTA01
    Properties: 
      RouteTableId:
        Ref: ROUTETABLEpublic01
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: INTERNETGW01


  ROUTETABLEprivate01:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId:
        Ref: VPCHAWebApp

  ROUTEprivate01:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ROUTETABLEprivate01
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATGW01


  ROUTETABLEprivate02:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId:
        Ref: VPCHAWebApp

  ROUTEprivate02:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ROUTETABLEprivate02
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATGW02


  #########################
  ###### ROUTE ASSOC ######
  #########################

  SUBNROUTEASSOCpublic01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ROUTETABLEpublic01 
      SubnetId:
        Ref: SUBNETpublic01


  SUBNROUTEASSOCpublic02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ROUTETABLEpublic01
      SubnetId:
        Ref: SUBNETpublic02

 
  SUBNROUTEASSOCprivate01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ROUTETABLEprivate01
      SubnetId:
        Ref: SUBNETprivate01

    
  SUBNROUTEASSOCprivate02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ROUTETABLEprivate02
      SubnetId:
        Ref: SUBNETprivate02




Outputs:
  OVPCHAWebApp:
    Description: Output for created VPC
    Value: 
      Ref: VPCHAWebApp
    Export:
      Name: !Sub ${EnvironmentName}-VPCHAWebApp

  OSUBNETSprivate:
    Description: Output for List of  private subnets
    Value: !Join [",", [ !Ref SUBNETprivate01, !Ref SUBNETprivate02 ]]
    Export:
      Name: !Sub ${EnvironmentName}-SUBNETSprivate

  OSUBNETprivate01:
    Description: Output for private subnet in 1st availability zone
    Value: 
      Ref: SUBNETprivate01
    Export:
      Name: !Sub ${EnvironmentName}-SUBNETprivate01

  OSUBNETprivate02:
    Description: Output for private subnet in 2nd availability zone
    Value: 
      Ref: SUBNETprivate02
    Export:
      Name: !Sub ${EnvironmentName}-SUBNETprivate02
          
  OSUBNETSpublic:
    Description: Output for List of public subnets
    Value: !Join [",", [ !Ref SUBNETpublic01, !Ref SUBNETpublic02 ]]
    Export:
      Name: !Sub ${EnvironmentName}-SUBNETSpublic

  OSUBNETpublic01:
    Description: Output for public subnet in 1st availability zone
    Value: 
      Ref: SUBNETpublic01
    Export:
      Name: !Sub ${EnvironmentName}-SUBNETpublic01

  OSUBNETpublic02:
    Description: Output for public subnet in 2nd availability zone
    Value: 
      Ref: SUBNETpublic02
    Export:
      Name: !Sub ${EnvironmentName}-SUBNETpublic2
